--- a/user-services/package.json
+++ b/user-services/package.json
@@ -33,7 +33,8 @@
         "express-rate-limit": "^5.2.6",
         "express-slow-down": "^1.4.0",
         "helmet": "^4.5.0",
-        "uuidv4": "^6.2.6"
+        "uuidv4": "^6.2.6",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.10",
