--- a/user-services/package.json
+++ b/user-services/package.json
@@ -33,7 +33,9 @@
         "express-rate-limit": "^5.2.6",
         "express-slow-down": "^1.4.0",
         "helmet": "^4.5.0",
-        "uuidv4": "^6.2.6",
+        "pg": "^8.7.1",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.2.36",
         "winston": "^3.3.3"
     },
     "devDependencies": {
