--- a/user-services/package.json
+++ b/user-services/package.json
@@ -25,8 +25,10 @@
     },
     "homepage": "https://github.com/magicwarms/boilerplate-express-typescript#readme",
     "dependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express-rate-limit": "^5.1.1",
         "@types/express-slow-down": "^1.3.0",
+        "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
