--- a/user-services/package.json
+++ b/user-services/package.json
@@ -4,7 +4,7 @@
     "description": "ExpressJS using Typescript - Boilerplate",
     "main": "index.js",
     "scripts": {
-        "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+        "dev": "nodemon src/index.ts",
         "start": "set NODE_ENV=production && node dist/index.js",
         "build": "tsc -p ."
     },
@@ -38,14 +38,14 @@
         "helmet": "^4.5.0",
         "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
-        "typeorm": "^0.2.36",
+        "typeorm": "^0.2.37",
         "winston": "^3.3.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.10",
         "@types/express": "^4.17.11",
-        "@types/node": "^14.14.41",
+        "@types/node": "^14.17.12",
         "ts-node-dev": "^1.1.6",
-        "typescript": "^4.2.4"
+        "typescript": "^4.4.2"
     }
 }
